--- a/package.json
+++ b/package.json
@@ -1,31 +1,46 @@
 {
-  "name": "resume-2.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "react-router build",
-    "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
-  },
-  "dependencies": {
-    "@react-router/node": "^7.5.0",
-    "@react-router/serve": "^7.5.0",
-    "isbot": "^5.1.17",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router": "^7.5.0"
-  },
-  "devDependencies": {
-    "@react-router/dev": "^7.5.0",
-    "@tailwindcss/vite": "^4.0.0",
-    "@types/node": "^20",
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.1",
-    "react-router-devtools": "^1.1.0",
-    "tailwindcss": "^4.0.0",
-    "typescript": "^5.7.2",
-    "vite": "^5.4.11",
-    "vite-tsconfig-paths": "^5.1.4"
-  }
+    "name": "resume-2.0",
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "build": "react-router build",
+        "dev": "react-router dev",
+        "start": "react-router-serve ./build/server/index.js",
+        "typecheck": "react-router typegen && tsc",
+        "format": "prettier --log-level warn --write \"**/*.{ts,tsx,css,json,md}\"",
+        "lint": "eslint ./app --ext .ts,.tsx --fix"
+    },
+    "dependencies": {
+        "@chakra-ui/react": "^3.15.0",
+        "@emotion/react": "^11.14.0",
+        "@react-router/node": "^7.5.0",
+        "@react-router/serve": "^7.5.0",
+        "isbot": "^5.1.17",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "react-router": "^7.5.0"
+    },
+    "devDependencies": {
+        "@eslint/compat": "^1.2.8",
+        "@react-router/dev": "^7.5.0",
+        "@tailwindcss/vite": "^4.0.0",
+        "@types/node": "^20",
+        "@types/react": "^19.0.1",
+        "@types/react-dom": "^19.0.1",
+        "@typescript-eslint/eslint-plugin": "^8.29.0",
+        "@typescript-eslint/parser": "^8.29.0",
+        "eslint": "^9.24.0",
+        "eslint-config-prettier": "^10.1.1",
+        "eslint-plugin-prettier": "^5.2.6",
+        "eslint-plugin-react": "^7.37.5",
+        "eslint-plugin-react-hooks": "^5.2.0",
+        "globals": "^16.0.0",
+        "jiti": "^2.4.2",
+        "prettier": "^3.5.3",
+        "react-router-devtools": "^1.1.0",
+        "tailwindcss": "^4.0.0",
+        "typescript": "^5.7.2",
+        "vite": "^5.4.11",
+        "vite-tsconfig-paths": "^5.1.4"
+    }
 }
