--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
         "@react-router/node": "^7.5.0",
         "@react-router/serve": "^7.5.0",
         "isbot": "^5.1.17",
+        "next-themes": "^0.4.6",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-icons": "^5.5.0",
         "react-router": "^7.5.0"
     },
     "devDependencies": {
