--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@chakra-ui/react": "^3.15.0",
         "@emotion/react": "^11.14.0",
+        "@react-router/fs-routes": "^7.5.1",
         "@react-router/node": "^7.5.0",
         "@react-router/serve": "^7.5.0",
         "isbot": "^5.1.17",
