--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,8 @@
     "editor.codeActionsOnSave": {
         "source.organizeImports": "always",
         "source.fixAll.eslint": "always"
+    },
+    "[terraform]": {
+        "editor.defaultFormatter": "hashicorp.terraform"
     }
 }
