--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,7 +19,7 @@ jobs:
             - name: Set up pnpm
               uses: pnpm/action-setup@v4
               with:
-                  version: 10.4.0
+                  version: 10.x
 
             - name: Set up Node.js
               uses: actions/setup-node@v4
