--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "resume-2.0",
     "private": true,
     "type": "module",
+    "packageManager": "pnpm@10.10.0",
     "scripts": {
         "build": "react-router build",
         "dev": "react-router dev",
