--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,6 +4,10 @@ on:
             - main
         paths:
             - 'src/**'
+            - 'package.json'
+            - 'pnpm-lock.yaml'
+            - 'tsconfig.json'
+            - 'vite.config.ts'
             - '.github/workflows/release.yaml'
 
 jobs:
