--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -40,7 +40,8 @@ jobs:
 
             - name: Upload to S3
               run: |
-                  aws s3 cp ./build/client/ s3://$S3_BUCKET_NAME/ --recursive
+                  aws s3 cp ./build/client/ s3://$S3_BUCKET_NAME/ --recursive --exclude "index.html"
+                  aws s3 cp ./build/client/ s3://$S3_BUCKET_NAME/ --include "index.html" --cache-control no-cache
               env:
                   S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
 
