--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -41,7 +41,7 @@ jobs:
             - name: Upload to S3
               run: |
                   aws s3 cp ./build/client/ s3://$S3_BUCKET_NAME/ --recursive --exclude "index.html"
-                  aws s3 cp ./build/client/ s3://$S3_BUCKET_NAME/ --include "index.html"
+                  aws s3 cp ./build/client/index.html s3://$S3_BUCKET_NAME/ --cache-control "max-age=0, no-cache, no-store, must-revalidate" --content-type "text/html"
               env:
                   S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
 
