--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "dependencies": {
         "@chakra-ui/react": "^3.15.0",
         "@emotion/react": "^11.14.0",
+        "@react-pdf/renderer": "^4.3.0",
         "@react-router/fs-routes": "^7.5.1",
+        "@react-router/node": "^7.5.0",
         "@react-router/serve": "^7.5.0",
+        "isbot": "^5",
         "next-themes": "^0.4.6",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
