Fixing some schema updates

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "source.organizeImports": "always",
         "source.fixAll.eslint": "always"
     },
+    "typescript.preferences.importModuleSpecifier": "shortest",
     "[terraform]": {
         "editor.defaultFormatter": "hashicorp.terraform"
     }
